tests/output/self_hosted/plusminus_error.txt
tests/plusminus_error.oomph:4: error: '+-' is not supported

    print(1 +- 2)
            ^^

